--- a/live-weather/src/app.css
+++ b/live-weather/src/app.css
@@ -55,4 +55,11 @@ height: 100vh;
     bottom:50%;
     transform:translate(-50%,-50%)
 } */
-
+.apierror{
+    height: 60vh;
+    color: red;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
